# scaficionado

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
examples/: scaffolding-rust-ai.toml  scaffolding.toml
examples/hooks/: post_generate.sh  pre_generate.sh
examples/kind-cluster/: kind_config.yaml.tera
examples/rust-openai/: Cargo.toml  env.tera
examples/rust-openai/src/: main.rs
examples/terraform-eks-cheap/: main.tf.tera  terraform.tf  variables.tf.tera
src/: lib.rs  main.rs
