[package]
name = "scaficionado"                                                                                                                # This must be unique on crates.io
version = "0.2.3"
edition = "2021"
description = "A scaffolding tool to create repeatable project structure using files and scripts from local or remote repositories."
license = "MIT"
readme = "README.md"
repository = "https://github.com/hortonew/scaficionado"
exclude = ["images/**", "examples/**", ".github/**"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
tempfile = "3.16.0"
tera = "1.20"
toml = "0.8"
